deploy/base/apiservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apiservice
  namespace: nextgen
  labels:
    app: apiservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apiservice
  template:
    metadata:
      labels:
        app: apiservice
    spec:
      containers:
        - name: apiservice
          image: suryadasari31/apiservice:1.0.1
          imagePullPolicy: Always

          ports:
            - containerPort: 9000

          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 9000
            initialDelaySeconds: 15
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 9000
            initialDelaySeconds: 30
            periodSeconds: 20
