deploy/base/authservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authservice
  namespace: nextgen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authservice
  template:
    metadata:
      labels:
        app: authservice
    spec:
      containers:
        - name: authservice
          image: suryadasari31/authservice:1.0.3
          imagePullPolicy: Always
          ports:
            - containerPort: 9001
