deploy/base/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: nextgen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: suryadasari31/frontend:1.0.25-c025a79-SNAPSHOT
          imagePullPolicy: Always
          ports:
            - containerPort: 9080
