deploy/base/apiservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apiservice
  namespace: nextgen
spec:
  selector:
    app: apiservice
  ports:
    - port: 9000
      targetPort: 9000
  type: ClusterIP
